# routes_laboratory

./: .coveragerc  .dockerignore  .editorconfig  .env  .env.example  .env.local  .gitattributes  .gitignore  .isort.cfg  .pylintrc  AUTHORS.rst  Dockerfile  Justfile  Results.txt  config.toml  docker-compose.yml  ideas.md  main.ipynb  pyproject.toml  readme.md  requirements.txt  settings.py  setup.cfg  test_transport.py
address_to_coords/: coordinates.csv  explore_matrix.py  osrm.py
algorithms/candidate_edges/: beta_skeleton.py  candidates.py  models.py  prunning.py  readme.md
algorithms/construction_heuristics/: christofides.py  insert_i1.py  tsp.py
algorithms/data_structures/: linked_list.py  other.py
algorithms/metaheuristics/: base.py  vns.py
algorithms/operators/: readme.md
algorithms/transformers/: __init__.py  atsp_to_tsp.py  base.py  clipper.py  delays.py  fake_depot.py  md_vrp_to_vrp.py  price_multiplier.py  scaler.py  to_rpdptw.py
algorithms/utils/: costs.py
api/: main.py  test.py
api/app/: exceptions.py  solver.py  urls.py  utils.py
benchmarks/: benchmark.py  lkh_benchmarks.py
candidate_edges/: candidates.py  edge_set.py
candidate_edges/alpha_measure/: one_tree.py  subgradient_optimization.py
customer_cases/drafts/: pragmatic_example.json5
customer_cases/eapteka/: answer.json  apeka_addresses.py  assembe_matrix.py  call_vroom.py  eapteka_solver.py  explore_and_run.ipynb  filter_points.py  geocoding.py  join_excels.py  main.py  matrix_work.py  parse_shit.py  problem_formulation.py  reponse  run.py  run_genetic.py  time_analysis.py
customer_cases/krugoreys/: pretty_res.xlsx  save_result.py  solve_with_lkh.py  transitions_model.py
data/cache/: fill_models__206a78ad59465c51b70d6f2a79fe754a.pkl  parse_data__267e0e3e503b8372d604b36fdb3d382c.pkl
data/metro/: metro_matrix.npz  mos_metro.csv
data/tests/: tst.xlsx
data_structures/: heap.py  linked_list.py  two_level_tree.py  unionfind.py
data_structures/tour/: array_tour.py  base.py
deployment/: serives.yml
docs/examples/: readme.md
formats/: api.py  sintef.py  tsplib.py
formats/excel/: multilist.py  one_list.py  universal.py
formats/pragmatic/: matrices.py  pragmatic.py  problem.py  solution.py  utils.py
geo/: __init__.py  geopoint.py  readme.md  settings.py  transforms.py  validation.py
geo/data_generation/: points.py
geo/geocoding/: others.py  parsing.py  sputnik.py
geo/martices/: osrm.py
geo/metro/: calc_distance_matrix.py  tt_calculator.py
geo/modeling_distance/: learning.py  osrm_matr.npz  points.npz
geo/operations/: filtering.py
geo/providers/: fake_module.py  fixes.py  here_module.py  matrix_work.py  osrm.py  osrm_module.py
geo/regions/: job.py
geo/transport/: calc_distance.py  main.py  matrix.py  readme.md  settings.py
madrich/: config.py  settings.py
madrich/api/: main.py  test.py  tests.py  wsgi.py
madrich/benchmarks/: benchmark.py  lkh_benchmarks.py
madrich/data/: eapteka.xls  eapteka.xlsx  eapteka_beton.xlsx  eapteka_result.xlsx  readme.md
madrich/formats/: api.py  data.json  data.pickle  export.py  out.xlsx  sintef.py  tsplib.py
madrich/geo/: transforms.py  validation.py
madrich/scripts/: download_big_data.py  join_excels.py  test_transport.py  upload_big_data.py
madrich/solvers/: base.py  transformational.py
madrich/temp/: cvrptw.py  tsp.py
madrich/tests/: eapteka_test.py  (+3 more)
metaheuristics/: lkh_genetics.py
models/: point.py
scripts/: build_python_macos.sh  download_big_data.py  join_excels.py  test_transport.py  upload_big_data.py
solvers/: base.py  transformational.py
solvers/madrich/bindings/: CMakeLists.txt  script.py  setup.py
solvers/madrich/bindings/problems/: base_model.cpp  base_model.h  generators.cpp  generators.h  mdvrp_main.cpp  route_utils.cpp  route_utils.h  vrp_main.cpp
solvers/madrich/bindings/problems/mdvrp/: mdvrp_model.cpp  mdvrp_model.h  mdvrp_problem.cpp  mdvrp_problem.h
solvers/madrich/bindings/problems/vrp/: vrp_improve.cpp  vrp_improve.h  vrp_model.cpp  vrp_model.h  vrp_problem.cpp  vrp_problem.h  vrp_utils.cpp  vrp_utils.h
solvers/madrich/bindings/problems/vrp/operators/: vrp_insert_job.cpp  vrp_insert_job.h  vrp_inter_operators.cpp  vrp_inter_operators.h  vrp_intra_operators.cpp  vrp_intra_operators.h
solvers/madrich/bindings/pybind11/: setup.py
solvers/madrich/bindings/pybind11/docs/: benchmark.py  conf.py
solvers/madrich/bindings/pybind11/pybind11/: __init__.py
solvers/madrich/bindings/pybind11/tests/: conftest.py  test_buffers.py  test_builtin_casters.py  test_call_policies.py  test_callbacks.py  test_class.py  test_copy_move.py  test_eigen.py  test_exceptions.py  test_factory_constructors.py  test_iostream.py  test_local_bindings.py  test_methods_and_attributes.py  test_modules.py  test_multiple_inheritance.py  test_numpy_dtypes.py  test_opaque_types.py  test_operator_overloading.py  test_pickling.py  test_pytypes.py  test_sequences_and_iterators.py  test_smart_ptr.py  test_stl.py  test_stl_binders.py  test_virtual_functions.py
solvers/madrich/bindings/pybind11/tools/: libsize.py  mkdoc.py
solvers/madrich/bindings/pybind11/tools/clang/: cindex.py
solvers/madrich/bindings/src/: bez_abstract_problem.cpp  bez_abstract_wrapper.cpp  generate_vrp.cpp  generate_vrp.h  improve.cpp  improve.h  insert_job.cpp  insert_job.h  inter_operators.cpp  inter_operators.h  intra_operators.cpp  intra_operators.h  main.cpp  problem.cpp  problem.h  utils.cpp  utils.h  wrapper.cpp
solvers/madrich/bindings/tests/: script.py
solvers/madrich/bindings/wrappers/: CMakeLists.txt  wrapper.cpp
temp/: iterative_tsp.py  or_tools_adapters.py  tsp.py  tsp_brutforce.py  tsp_coin_or.py
tmp/: readme.md
transformers/: base.py  clipper.py  delays.py  fake_depot.py  group_skills.py  ideas.py  md_vrp_to_vrp.py  price_multiplier.py  scaler.py  to_rpdptw.py
utils/: __init__.py  algorithms.py  data_formats.py  fs.py  generators.py  iteration.py  logs.py  printing.py  serialization.py
vendors/: ujson-2.0.3-cp38-cp38-win_amd64.whl  vroom
visualization/: main.py  models.py  visualizers.py
(+817 files in other folders)
