[tool.poetry]
name = "vrp"
version = "0.2.0"
description = ""
authors = ["Dmiriy Yampolkiy <yampolskiydv@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

numpy = "^1.19.3"
scipy = "^1.5.3"
fastcore = "^1.2.5"
returns = "^0.15.0"
pip = "^20.2.4"
xlrd = "^1.2.0"
geopy = "^2.0.0"
wheel = "^0.35.1"
utm = "^0.6.0"
matplotlib = "^3.3.2"
diskcache = "^5.0.3"
gmaps = "^0.9.0"
pandas = "^1.1.3"
geopandas = "^0.8.1"
"yandex.rasp" = "^0.0.2"
polyline = "^1.4.0"
ujson = "^4.0.1"
ortools = "^8.0.8283"
sklearn = "^0.0"
pyproj = "^2.6.1"
gdown = "^3.12.2"
Rtree = "^0.9.4"
pygeos = "^0.8"
rich = "^9.1.0"
more-itertools = "^8.6.0"
descartes = "^1.1.0"
arcgis = "^1.8.2"
herepy = "^3.1.0"
aiohttp = "^3.7.2"
tsplib95 = "^0.7.1"
openpyxl = "^3.0.5"
transliterate = "^1.10.2"
llvmlite = "^0.34.0"
numba = "^0.51.2"
fastparquet = "^0.4.1"
mapclassify = "^2.3.0"
PyYAML = "^5.3.1"
folium = "^0.11.0"
regex = "^2020.10.28"
environs = "^8.0.0"
Pyomo = "^5.7.1"
timezonefinder = {extras = ["numba"], version = "^4.4.1"}
bidict = "^0.21.2"
deap = "^1.3.1"
deepdict = "^0.3.0"
bs4 = "^0.0.1"
beautifulsoup4 = "^4.9.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pytest = "^6.1.1"
pytest-pycharm = "^0.7.0"
jupyter = "^1.0.0"
tqdm = "^4.50.2"
mock = "^4.0.2"
hypothesis = "^5.37.3"
black = "^20.8b1"
jupyterlab = "^2.2.9"
notebook = "^6.1.4"
birdseye = "^0.8.4"
mypy = "^0.790"
pylint = "^2.6.0"
pandas-vet = "^0.2.2"
Sphinx = "^3.3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
