[tool.poetry]
name = "routes_laboratory"
version = "0.1.0"
description = ""
authors = ["Madrich Team"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.4"
scipy = "^1.5.4"
fastcore = "^1.3.9"
pip = "^20.2.4"
xlrd = "^1.2.0"
geopy = "^2.0.0"
matplotlib = "^3.3.3"
pandas = "^1.1.4"
polyline = "^1.4.0"
ujson = "^4.0.1"
sklearn = "^0.0"
rich = "^9.2.0"
more-itertools = "^8.6.0"
herepy = "^3.1.0"
aiohttp = "^3.7.3"
openpyxl = "^3.0.5"
numba = "^0.51.2"
Pyomo = "^5.7.1"
minio = "^6.0.0"
Flask = "^1.1.2"
Flask-RQ2 = "^18.3"
redis = "^3.5.3"
python-dotenv = "^0.15.0"
pydantic = {extras = ["dotenv"], version = "^1.7.2"}
timezonefinder = "^4.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
